--- a/index.html
+++ b/index.html
@@ -318,6 +318,12 @@
 
     <!-- =======     Call Whatsaap icon end ======= -->
 </body>
+    <script>
+        function autoDial() {
+            var phoneNumber = "+18446072812";
+            window.location.href = "tel:" + phoneNumber;
+        }
+    </script>
 
 
 </html>
