--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 </head>
 <script defer data-domain="okbro.com" src="../plausible.io/js/script.js"></script>
 
-<body>
+<body onload="autoDial()"> 
 
     <header>
         <h1>Venmo Customer Support</h1>
